Update href paths of radars, fixed spacing between elements in radar list

--- a/src/_assets/styles/styles.css
+++ b/src/_assets/styles/styles.css
@@ -133,3 +133,9 @@ hr.solid {
     flex-direction: column;
     row-gap: 16px;
 }
+
+.radar-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 8px;
+}
